--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -8,7 +8,21 @@
     <title>Mudrunner and Snowrunner Savegame Manager</title>
     <meta name="description" content="Description of the site">
     <meta name="author" content="The Author">
+
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <div class="w3-container w3-orange w3-center">
+        <h1>MudSaver - Savegame Manager</h1>
+    </div>
+    <div class="w3-panel">
+        <div class="w3-row-padding">
+            <div class="w3-col s6 w3-center" onclick="location.href='/mud-runner'">
+                <img class="w3-round w3-image" alt="MudRunner" style="width:100%" src="images/mud-runner.jpg" />
+            </div>
+            <div class="w3-col s6 w3-center" onclick="location.href='/snow-runner'">
+                <img class="w3-round w3-image" alt="SnowRunner" style="width:100%;" src="images/snow-runner.jpg" />
+            </div>
+        </div>
+    </div>
 </body>
