--- a/templates/base.hbs
+++ b/templates/base.hbs
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<html lang="en" class="dark">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -9,11 +9,63 @@
     <meta name="description" content="Description of the site">
     <meta name="author" content="The Author">
 
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="/static/w3.css">
+    <script src="/static/w3.js"></script>
 </head>
-<body>
-    <div class="w3-container w3-orange w3-center" onclick="location.href='/'">
-        <h1>MudSaver - Savegame Manager</h1>
+<body onload="load_subpage('/overview', false)">
+    <!-- Sidebar -->
+    <div class="w3-sidebar w3-display-container w3-bar-block w3-card w3-animate-right" style="display:none;right:0" id="side">
+        <button onclick="w3_close()" class="w3-bar-item w3-gray w3-button w3-large">Close &times;</button>
+        <a href="#" class="w3-bar-item w3-button">Settings</a>
+        <a href="https://github.com/theswiftfox/mud-saver/issues" target="_blank" class="w3-bar-item w3-button">Report Issue</a>
+        <div class="w3-panel w3-display-bottomleft">Version: 1.0.0</div>
     </div>
-    {{> (this) }}
+    <!-- Topbar -->
+    <div class="w3-container w3-display-container w3-orange w3-center">
+        <h1>MudSaver</h1>
+        <div class="w3-container">A savegame manager for MudRunner and SnowRunner</div>
+        <button id="navBtn" class="w3-button w3-orange w3-xlarge w3-display-right" onclick="w3_open()">☰</button>
+        <button id="homeBtn" class="w3-button w3-orange w3-xlarge w3-display-left" onclick="load_subpage('/overview', false)">ᐸ</button>
+    </div>
+    <!-- Content -->
+    <div id="main" class="w3-container">
+    </div>
+
+
+    <script>
+        function w3_open() {
+            document.getElementById("main").style.marginRight = "15%";
+            document.getElementById("side").style.width = "15%";
+            document.getElementById("side").style.display = "block";
+            document.getElementById("navBtn").style.display = 'none';
+        }
+
+        function w3_close() {
+            document.getElementById("main").style.marginRight = "0%";
+            document.getElementById("side").style.display = "none";
+            document.getElementById("navBtn").style.display = 'inline-block';
+        }
+        
+        function load_subpage(target, showBack) {
+            var elem = document.getElementById("main");
+            var xhttp = new XMLHttpRequest();
+            xhttp.open("GET", target);
+            xhttp.send();
+            xhttp.onreadystatechange = function() {
+                if (xhttp.readyState == 4) {
+                    if (this.status == 200) { 
+                        elem.innerHTML = xhttp.responseText;
+                        if (showBack) {
+                            w3.show('#homeBtn');
+                        } else {
+                            w3.hide('#homeBtn');
+                        };
+                    }
+                    if (this.status == 404) { elem.innerHTML = "Error loading Subpage!"; }
+                }
+            }
+
+            return;
+        }
+    </script>
 </body>
