--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -1,9 +1,9 @@
 <div class="w3-panel">
     <div class="w3-row-padding">
-        <div class="w3-col s6 w3-center" onclick="location.href='/mud-runner'">
+        <div class="w3-col s6 w3-center" onclick="load_subpage('/mud-runner', true)">
             <img class="w3-round w3-image" alt="MudRunner" style="width:100%" src="images/mud-runner.jpg" />
         </div>
-        <div class="w3-col s6 w3-center" onclick="location.href='/snow-runner'">
+        <div class="w3-col s6 w3-center" onclick="load_subpage('/snow-runner', true)">
             <img class="w3-round w3-image" alt="SnowRunner" style="width:100%;" src="images/snow-runner.jpg" />
         </div>
     </div>
