#10 : revert unintended change to template

--- a/templates/snowrunner.hbs
+++ b/templates/snowrunner.hbs
@@ -1,11 +1,3 @@
-<div class="w3-card">
-    <header class="w3-panel w3-theme">
-        <h2>Active Profile</h2>
-    </header>
-    <div class="w3-container">
-
-    </div>
-    <footer>
-        <button>Save</button>
-    </footer>
+<div class="w3-panel">
+    <h2>SnowRunner Saves</h2>
 </div>
