#10: add theme files to local static data

--- a/templates/base.hbs
+++ b/templates/base.hbs
@@ -10,7 +10,7 @@
     <meta name="author" content="The Author">
 
     <link rel="stylesheet" href="/static/w3.css">
-    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-{{ this }}.css">
+    <link rel="stylesheet" href="/static/w3-theme-{{ this }}.css">
     <script src="/static/w3.js"></script>
 </head>
 
