#14 add new option to settings struct; adapt frontend for handling new logic

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -1,9 +1,9 @@
 <div class="w3-panel">
     <div class="w3-row-padding">
-        <div class="w3-col s6 w3-center" onclick="load_subpage('/mud-runner')">
+        <div id="mr_idx" class="w3-col s6 w3-center" onclick="load_subpage('/mud-runner')">
             <img class="w3-round w3-image" alt="MudRunner" style="width:100%" src="images/mud-runner.jpg" />
         </div>
-        <div class="w3-col s6 w3-center" onclick="load_subpage('/snow-runner')">
+        <div id="sr_idx" class="w3-col s6 w3-center" onclick="load_subpage('/snow-runner')">
             <img class="w3-round w3-image" alt="SnowRunner" style="width:100%;" src="images/snow-runner.jpg" />
         </div>
     </div>
