--- a/templates/base.hbs
+++ b/templates/base.hbs
@@ -38,9 +38,9 @@
             <h1>MudRunner</h1>
             Backup or load savegame
         </div>
-        <button id="menuBtn" class="w3-button w3-theme w3-xlarge w3-display-right" onclick="w3_open()">☰</button>
+        <button id="menuBtn" class="w3-button w3-theme w3-xlarge w3-display-right" onclick="w3_open()">&#x2630;</button>
         <button id="homeBtn" class="w3-button w3-theme w3-xlarge w3-display-left" style="display: none;"
-            onclick="load_subpage('/overview')">ᐸ</button>
+            onclick="load_subpage('/overview')">&#5176;</button>
     </div>
     <div id="loading_bar_container" class="w3-light-grey">
         <div id="loading_bar" class="w3-container w3-theme" style="height:24px;width:1%"></div>
@@ -102,15 +102,17 @@
     </div>
 
     <script>
-        var settings;
+        var settings = null;
+        var selected_snowrunner_profile = null;
+        var save_snowrunner_profile = null;
 
         function init() {
             var http = new XMLHttpRequest();
-            http.open("GET", '/settings');
+            http.open('GET', '/settings');
             http.send();
             http.onreadystatechange = function () {
                 if (http.readyState == 4 && this.status == 200) {
-                    w3.hide("#loading_bar_container");
+                    w3.hide('#loading_bar_container');
                     settings = JSON.parse(http.responseText);
                     if ((settings.enable_snowrunner && settings.enable_mudrunner) ||
                         (!settings.enable_mudrunner && !settings.enable_snowrunner)) {
@@ -124,7 +126,7 @@
                     }
                 }
             };
-            var bar = document.getElementById("loading_bar");
+            var bar = document.getElementById('loading_bar');
             var width = 1;
             var id = setInterval(frame, 10);
             function frame() {
@@ -138,17 +140,17 @@
         }
 
         function w3_open() {
-            document.getElementById("main").style.marginRight = "15%";
-            document.getElementById("side").style.width = "15%";
-            document.getElementById("side").style.display = "block";
-            document.getElementById("menuBtn").style.display = 'none';
+            document.getElementById('main').style.marginRight = '15%';
+            document.getElementById('side').style.width = '15%';
+            document.getElementById('side').style.display = 'block';
+            document.getElementById('menuBtn').style.display = 'none';
         }
 
         function w3_close() {
-            document.getElementById("main").style.marginRight = "0%";
-            document.getElementById("side").style.width = "0%";
-            document.getElementById("side").style.display = "none";
-            document.getElementById("menuBtn").style.display = 'inline-block';
+            document.getElementById('main').style.marginRight = '0%';
+            document.getElementById('side').style.width = '0%';
+            document.getElementById('side').style.display = 'none';
+            document.getElementById('menuBtn').style.display = 'inline-block';
         }
 
         function load_subpage(target, showSettings, hideHome) {
@@ -156,9 +158,9 @@
             if (!showBack) {
                 w3.hide('#homeBtn');
             }
-            var elem = document.getElementById("main");
+            var elem = document.getElementById('main');
             var xhttp = new XMLHttpRequest();
-            xhttp.open("GET", target);
+            xhttp.open('GET', target);
             xhttp.send();
             xhttp.onreadystatechange = function () {
                 if (xhttp.readyState == 4) {
@@ -166,35 +168,101 @@
                         elem.innerHTML = xhttp.responseText;
                         if (showBack) {
                             if (!showSettings) {
-                                w3.hide("#menuBtn");
+                                w3.hide('#menuBtn');
                             }
                             if (!hideHome) {
                                 w3.show('#homeBtn');
                             }
-                            w3.hide("#overview-header");
+                            w3.hide('#overview-header');
 
                             if (target.includes('mud-runner')) {
-                                w3.show("#mudrunner-header");
+                                w3.show('#mudrunner-header');
                             } else {
-                                w3.show("#snowrunner-header");
+                                w3.show('#snowrunner-header');
                             }
                         } else {
-                            w3.hide("#snowrunner-header");
-                            w3.hide("#mudrunner-header");
-                            w3.show("#overview-header");
-                            w3.show("#menuBtn")
+                            w3.hide('#snowrunner-header');
+                            w3.hide('#mudrunner-header');
+                            w3.show('#overview-header');
+                            w3.show('#menuBtn')
                         }
                     }
-                    if (this.status == 404) { elem.innerHTML = "Error loading Subpage!"; }
+                    if (this.status == 404) {
+                        elem.innerHTML = 'Error loading Subpage!';
+                    }
                 }
             }
 
             return;
         }
 
+        function load_saves(uuid) {
+            if (selected_snowrunner_profile) {
+                w3.hide("[id='" + selected_snowrunner_profile + "']");
+            }
+            var http = new XMLHttpRequest();
+            http.open('GET', '/snow-runner/profile?id=' + uuid);
+            http.send();
+            http.onreadystatechange = function () {
+                if (http.readyState == 4) {
+                    if (this.status == 200) {
+                        document.getElementById('saves').innerHTML = http.responseText;
+                        selected_snowrunner_profile = uuid;
+                        w3.show("[id='" + selected_snowrunner_profile + "']");
+                    } else {
+                        console.warn(http.responseText);
+                    }
+                }
+            }
+        }
+
+        function backup_snowrunner() {
+            var profile = document.getElementById('snowrunner-save-modal').getAttribute('profile');
+            var name = document.getElementById('snowrunner-save-name').value;
+            var http = new XMLHttpRequest();
+            http.open('POST', '/snow-runner/profile?id=' + profile + '&name=' + name);
+            http.send();
+            http.onreadystatechange = function () {
+                if (http.readyState == 4) {
+                    if (this.status == 200) {
+                        alert('Backup Succesful');
+                        close_snowrunner_modal();
+                        load_saves(profile);
+                    }
+                }
+            }
+        }
+
+        function delete_snowrunner(save_uuid) {
+            var http = new XMLHttpRequest();
+            http.open('DELETE', '/snow-runner/profile?id=' + selected_snowrunner_profile + '&savegame=' + save_uuid);
+            http.send();
+            http.onreadystatechange = function () {
+                if (http.readyState == 4) {
+                    if (this.status == 200) {
+                        alert('Delete Succesful');
+                        load_saves(selected_snowrunner_profile);
+                    }
+                }
+            }
+        }
+
+        function open_snowrunner_modal(uuid) {
+            var modal = document.getElementById('snowrunner-save-modal');
+            modal.style.display = 'block';
+            modal.setAttribute('profile', uuid);
+        }
+
+        function close_snowrunner_modal() {
+            var modal = document.getElementById('snowrunner-save-modal');
+            modal.style.display = 'none';
+            modal.setAttribute('profile', null)
+            document.getElementById('snowrunner-save-name').value = null;
+        }
+
         function load_settings(showModal) {
             var http = new XMLHttpRequest();
-            http.open("GET", '/settings');
+            http.open('GET', '/settings');
             http.send();
             http.onreadystatechange = function () {
                 if (http.readyState == 4 && this.status == 200) {
@@ -210,14 +278,14 @@
 
         function display_settings(settings) {
             set_selected_theme(settings.color);
-            document.getElementById("mr_enabled").checked = settings.enable_mudrunner;
-            document.getElementById("sr_enabled").checked = settings.enable_snowrunner;
+            document.getElementById('mr_enabled').checked = settings.enable_mudrunner;
+            document.getElementById('sr_enabled').checked = settings.enable_snowrunner;
         }
 
 
         function set_selected_theme(theme) {
             settings.color = theme;
-            var elem = document.getElementById("selected_theme");
+            var elem = document.getElementById('selected_theme');
             var oldColor = elem.innerHTML;
             elem.innerHTML = theme;
             if (oldColor != '') {
@@ -227,7 +295,7 @@
         }
 
         function check_valid_settings() {
-            var btn = document.getElementById("save_btn")
+            var btn = document.getElementById('save_btn')
             if (!(settings.enable_mudrunner || settings.enable_snowrunner)) {
                 btn.disabled = true;
             } else {
@@ -246,8 +314,8 @@
 
         function save_settings() {
             var http = new XMLHttpRequest();
-            http.open("POST", '/settings');
-            http.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
+            http.open('POST', '/settings');
+            http.setRequestHeader('Content-Type', 'application/json;charset=UTF-8');
             http.send(JSON.stringify(settings));
             http.onreadystatechange = function () {
                 if (http.readyState == 4 && this.status == 200) {
