Issue #25: Usability improvements (wip)

--- a/templates/base.hbs
+++ b/templates/base.hbs
@@ -102,6 +102,19 @@
         </div>
     </div>
 
+    <div id="info-modal" class="w3-modal">
+        <div class="w3-modal-content w3-animate-top w3-card-4">
+            <header class="w3-container w3-theme">
+                <h2 id="info-title"></h2>
+            </header>
+            <div id="info-content" class="w3-container">
+
+            </div>
+            <footer class="w3-container w3-theme">
+            </footer>
+        </div>
+    </div>
+
     <script>
         var settings = null;
         var selected_snowrunner_profile = null;
