issue #25: add custom modals instead of 'alert'

--- a/templates/base.hbs
+++ b/templates/base.hbs
@@ -18,7 +18,8 @@
     <!-- Sidebar -->
     <div class="w3-sidebar w3-display-container w3-bar-block w3-card w3-animate-right" style="display:none;right:0"
         id="side">
-        <button onclick="w3_close()" class="w3-bar-item w3-theme-action w3-button w3-large">Close &times;</button>
+        <button onclick="w3_close_sidebar()()" class="w3-bar-item w3-theme-action w3-button w3-large">Close
+            &times;</button>
         <div class="w3-bar-item w3-button" onclick="load_settings(true)">Settings</div>
         <a href="https://github.com/theswiftfox/mud-saver/issues" target="_blank" class="w3-bar-item w3-button">Report
             Issue</a>
@@ -39,7 +40,8 @@
             <h1>MudRunner</h1>
             Backup or load savegame
         </div>
-        <button id="menuBtn" class="w3-button w3-theme w3-xlarge w3-display-right" onclick="w3_open()">&#x2630;</button>
+        <button id="menuBtn" class="w3-button w3-theme w3-xlarge w3-display-right"
+            onclick="w3_open_sidebar()()">&#x2630;</button>
         <button id="homeBtn" class="w3-button w3-theme w3-xlarge w3-display-left" style="display: none;"
             onclick="load_subpage('/overview')">&#5176;</button>
     </div>
@@ -103,15 +105,21 @@
     </div>
 
     <div id="info-modal" class="w3-modal">
-        <div class="w3-modal-content w3-animate-top w3-card-4">
-            <header class="w3-container w3-theme">
+        <div class="w3-modal-content w3-animate-zoom" style="max-width: 300px;">
+            <div class="w3-center w3-padding-16">
                 <h2 id="info-title"></h2>
-            </header>
-            <div id="info-content" class="w3-container">
-
+                <div id="info-content" class="w3-container">
+                    <span id="info-content" class="w3-text"></span>
+                </div>
             </div>
-            <footer class="w3-container w3-theme">
-            </footer>
+            <div class="w3-container w3-border-top w3-padding-8 w3-light-grey">
+                <div class="w3-right">
+                    <div class="w3-bar">
+                        <button id="info-retry" class="w3-bar-item w3-button" style="display: none;">Retry</button>
+                        <button id="info-accept" class="w3-bar-item w3-button">Ok</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -164,14 +172,62 @@
             }
         }
 
-        function w3_open() {
+        function show_info(title, message) {
+            show_info_with_action(title, message, null);
+        }
+
+        function show_info_with_action(title, message, action) {
+            w3.hide('#info-retry');
+            document.getElementById('info-title').innerHTML = title;
+            document.getElementById('info-content').innerHTML = message;
+            var btn = document.getElementById('info-accept');
+            if (action != null) {
+                btn.onclick = function () {
+                    action();
+                    w3.hide('#info-modal');
+                };
+            } else {
+                btn.onclick = w3.hide('#info-modal');
+            }
+            w3.show('#info-modal');
+        }
+
+        function show_info_with_retry(title, message, okAction, retryAction) {
+            document.getElementById('info-title').innerHTML = title;
+            document.getElementById('info-content').innerHTML = message;
+            var okbtn = document.getElementById('info-accept');
+            if (okAction != null) {
+                okbtn.onclick = function () {
+                    okAction();
+                    w3.hide('#info-modal');
+                };
+            } else {
+                okbtn.onclick = function () {
+                    w3.hide('#info-modal');
+                };
+            }
+            var retryBtn = document.getElementById('info-retry');
+            if (retryAction != null) {
+                w3.show('#info-retry');
+                retryBtn.onclick = function () {
+                    retryAction();
+                    w3.hide('#info-modal');
+                };
+            } else {
+                w3.hide('#info-retry');
+                retryBtn.action = null;
+            }
+            w3.show('#info-modal');
+        }
+
+        function w3_open_sidebar() {
             document.getElementById('main').style.marginRight = '15%';
             document.getElementById('side').style.width = '15%';
             document.getElementById('side').style.display = 'block';
             document.getElementById('menuBtn').style.display = 'none';
         }
 
-        function w3_close() {
+        function w3_close_sidebar() {
             document.getElementById('main').style.marginRight = '0%';
             document.getElementById('side').style.width = '0%';
             document.getElementById('side').style.display = 'none';
@@ -235,7 +291,7 @@
                         selected_snowrunner_profile = uuid;
                         w3.show("[id='" + selected_snowrunner_profile + "']");
                     } else {
-                        console.warn(http.responseText);
+                        show_info('Error loading SaveGames', http.responseText);
                     }
                 }
             }
@@ -250,11 +306,13 @@
             http.onreadystatechange = function () {
                 if (http.readyState == 4) {
                     if (this.status == 200) {
-                        alert('Backup Succesful');
-                        close_snowrunner_modal();
-                        load_saves(profile);
+                        var action = function () {
+                            close_snowrunner_modal();
+                            load_saves(profile);
+                        };
+                        show_info_with_action('Backup Success!', '', action);
                     } else {
-                        alert(http.responseText);
+                        show_info_with_retry('Error on Backup', 'Cause:<br>' + http.responseText, null, backup_snowrunner);
                     }
                 }
             }
@@ -269,10 +327,9 @@
             http.onreadystatechange = function () {
                 if (http.readyState == 4) {
                     if (this.status == 200) {
-                        alert('Backup Succesful');
-                        close_mudrunner_modal();
+                        show_info_with_action('Backup Success!', '', close_mudrunner_modal);
                     } else {
-                        alert(http.responseText);
+                        show_info_with_retry('Error on Backup', 'Cause:<br>' + http.responseText, null, backup_mudrunner);
                     }
                 }
             }
@@ -285,10 +342,15 @@
             http.onreadystatechange = function () {
                 if (http.readyState == 4) {
                     if (this.status == 200) {
-                        alert('Delete Succesful');
-                        load_saves(selected_snowrunner_profile);
+                        let action = function () {
+                            load_saves(selected_snowrunner_profile);
+                        }
+                        show_info_with_action('Backup Success!', '', action);
                     } else {
-                        alert(http.responseText);
+                        let retry = function () {
+                            delete_snowrunner(save_uuid);
+                        };
+                        show_info_with_retry('Unabtle to Delete', 'Cause:<br>' + http.responseText, null, retry);
                     }
                 }
             }
@@ -301,15 +363,20 @@
             http.onreadystatechange = function () {
                 if (http.readyState == 4) {
                     if (this.status == 200) {
-                        alert('Restore Succesful');
-                        var show_buttons = true;
-                        if (settings.enable_mudrunner && settings.enable_snowrunner) {
-                            show_buttons = false;
+                        let action = function () {
+                            var show_buttons = true;
+                            if (settings.enable_mudrunner && settings.enable_snowrunner) {
+                                show_buttons = false;
+                            }
+                            load_subpage('/snow-runner', show_buttons, show_buttons);
+                            load_saves(selected_snowrunner_profile);
                         }
-                        load_subpage('/snow-runner', show_buttons, show_buttons);
-                        load_saves(selected_snowrunner_profile);
+                        show_info_with_action('Restore Succesful', '', action);
                     } else {
-                        alert(http.responseText);
+                        let retry = function () {
+                            restore_snowrunner(save_uuid);
+                        }
+                        show_info_with_retry('Unabtle to Restore', 'Cause:<br>' + http.responseText, null, retry);
                     }
                 }
             }
@@ -400,8 +467,12 @@
             http.send(JSON.stringify(settings));
             http.onreadystatechange = function () {
                 if (http.readyState == 4 && this.status == 200) {
-                    alert('Saved settings!');
-                    location.reload();
+                    let action = function () {
+                        location.reload();
+                    };
+                    show_info_with_action('Settings saved!', '', action);
+                } else {
+                    show_info_with_retry('Unabtle to save Settings', 'Cause:<br>' + http.responseText, null, save_settings);
                 }
             }
         }
