--- a/templates/snowrunner.hbs
+++ b/templates/snowrunner.hbs
@@ -41,7 +41,8 @@
                     <input id="snowrunner-save-name" type="text" class="w3-input w3-border w3-round" placeholder="Name">
                 </div>
                 <div class="w3-row w3-section">
-                    <button class="w3-button w3-theme w3-block w3-padding" onclick="backup_snowrunner()">Save</button>
+                    <button id="snowrunner-save-button" class="w3-button w3-theme w3-block w3-padding"
+                        onclick="backup_snowrunner()">Save</button>
                 </div>
             </div>
         </div>
