--- a/templates/mudrunner.hbs
+++ b/templates/mudrunner.hbs
@@ -8,7 +8,7 @@
                     <span class="w3-large">
                         {{this.original_name}}
                     </span>
-                    <br/>
+                    <br />
                     <span class="w3-small">
                         {{date-time date=this.timestamp}}
                     </span>
@@ -40,7 +40,8 @@
                     <input id="mudrunner-save-name" type="text" class="w3-input w3-border w3-round" placeholder="Name">
                 </div>
                 <div class="w3-row w3-section">
-                    <button class="w3-button w3-theme w3-block w3-padding" onclick="backup_mudrunner()">Save</button>
+                    <button id="mudrunner-save-button" class="w3-button w3-theme w3-block w3-padding"
+                        onclick="backup_mudrunner()">Save</button>
                 </div>
             </div>
         </div>
